Cập nhật code phần Thanh_Guest-delivery